--- a/panda.html
+++ b/panda.html
@@ -12,7 +12,7 @@
 	</div>
 		<h2 style="text-align: center">About Po</h2>
 			<p style="text-align: center; font-size: 24px">
-				Po aka The Dragon Warrior is a character from a famous animated movie, "Kung-Fu Panda". It's first movie was released on 2008, then they released 2 more of its series on 2011 and 2016 respectively and was rated PG. The character is a fat, fluffy panda who likes 2 things-eating and fighting. He got selected as the dragon master by The Grand Master Oogway and then got training by Master Shifu and The Furious Five. It is a really nice movie and I would recommend you all to see it!
+				Po aka The Dragon Warrior is a character from a famous animated movie, "Kung-Fu Panda". It's first movie was released on 2008, then they released 2 more of its series on 2011 and 2016 respectively and was rated PG. The character is a fat, fluffy panda who likes 2 things-eating and fighting. He got selected as the dragon master by The Grand Master Oogway and then got training by Master Shifu and The Furious Five. It is a really nice movie and you gotta see it!
 			</p>
 		<div class="content" style="margin: 0px">
 		<h2>Friends</h2>
