--- a/panda.html
+++ b/panda.html
@@ -17,7 +17,7 @@
 		<div class="content" style="margin-left: 100px">
 		<h2>Friends</h2>
 			<p>
-				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Shifu" target="_blank" title="Know more about Shifu;">Master Shifu</a></li>
+				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Shifu" target="_blank" title="Know more about Shifu">Master Shifu</a></li>
 				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Oogway" target="_blank" title="Know more abour Oogway">Master Oogway</a></li>
 				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Furious_Five" target="_blank" title="Know more about The Furious Five">Furious Five</a> </li>
 			</p>
