--- a/panda.html
+++ b/panda.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Kung-Fu Panda</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body style="margin: 0px; padding: 0px; font-size: 24px;">
 	<div class="wrapper">
@@ -12,20 +13,20 @@
 	</div>
 		<h2 style="text-align: center">About Po</h2>
 			<p style="text-align: center; font-size: 24px">
-				Po aka The Dragon Warrior is a character from a famous animated movie, "Kung-Fu Panda". It's first movie was released on 2008, then they released 2 more of its series on 2011 and 2016 respectively and was rated PG. The character is a fat, fluffy panda who likes 2 things-eating and fighting. He got selected as the dragon master by The Grand Master Oogway and then got training by Master Shifu and The Furious Five. It is a really nice movie and you gotta see it!
+				<a href="https://kungfupanda.fandom.com/wiki/Po">Po</a> aka The Dragon Warrior is a character from a famous animated movie, "<a href="https://en.wikipedia.org/wiki/Kung_Fu_Panda">Kung-Fu Panda</a>". It's first movie was released on 2008, then they released 2 more of its series on 2011 and 2016 respectively and was rated PG. The character is a fat, fluffy panda who likes 2 things-eating and fighting. He got selected as the dragon master by The Grand Master Oogway and then got training by Master Shifu and The Furious Five. It is a really nice movie and you gotta see it!
 			</p>
 		<div class="content" style="margin-left: 100px">
 		<h2>Friends</h2>
 			<p>
-				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Shifu" target="_blank" title="Know more about Shifu">Master Shifu</a></li>
-				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Oogway" target="_blank" title="Know more abour Oogway">Master Oogway</a></li>
-				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Furious_Five" target="_blank" title="Know more about The Furious Five">Furious Five</a> </li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Shifu" target="_blank" title="Know more about Shifu">Master Shifu</a></li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Oogway" target="_blank" title="Know more abour Oogway">Master Oogway</a></li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Furious_Five" target="_blank" title="Know more about The Furious Five">Furious Five</a> </li>
 			</p>
 		<h2>Enemies</h2>
 			<p>
-				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Tai_Lung" target="_blank" title="Know more about Tai Lung">Tai Lung</a> from Kung-Fu Panda</li>
-				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Shen" target="_blank" title="Know more about Shen">Lord Shen</a> from Kung-Fu Panda 2</li>
-				<li><a style="color: red; text-decoration: none;" href="https://kungfupanda.fandom.com/wiki/Kai_(Kung_Fu_Panda_3)" target="_blank" title="Know more about Kai"> Bull Kai</a> from Kung-Fu Panda 3</li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Tai_Lung" target="_blank" title="Know more about Tai Lung">Tai Lung</a> from Kung-Fu Panda</li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Shen" target="_blank" title="Know more about Shen">Lord Shen</a> from Kung-Fu Panda 2</li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Kai_(Kung_Fu_Panda_3)" target="_blank" title="Know more about Kai"> Bull Kai</a> from Kung-Fu Panda 3</li>
 			</p>
 		</div>
 			</body>
