More updates based on class

--- a/panda.html
+++ b/panda.html
@@ -3,24 +3,26 @@
 <head>
 	<title>Kung-Fu Panda</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="icon" href="dw.jpg">
 </head>
 <body style=" margin: 0px; font-size: 24px;">
 	<!--top section-->
 	<div class="wrapper">
-		<header style="background-color: orange; padding: 40px; text-align: center;">
-			<img src="panda.jpg" style="border-radius: 150px;">
+		<header style="background-color: orange; padding: 50px; text-align: center;">
+			<img src="panda.jpg" style="border-radius: 150px; border: 10px;">
 			<h1 style="color: white; font-size: 78px">Po, The Dragon Warrior</h1>
 		</header>
 	</div>
 	<!--details-->
-		<h2 style="margin-left: 550px">About Po</h2>
-			<p style="text-align: center; font-size: 24px; margin: 0 100px">
+	<div class="bloom">
+		<h2 >About Po</h2>
+			<p style="text-align: justify; font-size: 24px; margin: 0 100px">
 				<a href="https://kungfupanda.fandom.com/wiki/Po">Po</a> aka The Dragon Warrior is a character from a famous animated movie, "<a href="https://en.wikipedia.org/wiki/Kung_Fu_Panda">Kung-Fu Panda</a>". It's first movie was released on 2008, then they released 2 more of its series on 2011 and 2016 respectively and was rated PG. The character is a fat, fluffy panda who likes 2 things-eating and fighting. He got selected as the dragon master by The Grand Master Oogway and then got training by Master Shifu and The Furious Five. It is a really nice movie and you gotta see it!
 			</p>
-		<div class="content" style="margin-left: 100px">
+		<div class="content">
 		<!--links-->
 		<h2>Friends</h2>
-			<figure><img src="f5.jpg" class="yeet" alt="The Furious Five"><img src="pod.jpg" class="yeet" width="150px" alt="Panda Buddies"><img src="mm.jpg" class="yeet" alt="Po's Masters"></figure>
+			<figure class="small"><img src="f5.jpg" class="yeet" alt="The Furious Five"><img src="pod.jpg" class="yeet" width="180px" alt="Panda Buddies"><img src="mm.jpg" class="yeet"></figure>
 			<p class="hmm">
 				<li>Furious Five - <a href="https://kungfupanda.fandom.com/wiki/Tigress" target="_blank">Tigress</a>, <a href="https://kungfupanda.fandom.com/wiki/Monkey" target="_blank">Monkey</a>, <a href="https://kungfupanda.fandom.com/wiki/Crane" target="_blank">Crane</a>, <a href="https://kungfupanda.fandom.com/wiki/Mantis" target="_blank">Mantis</a> and <a href="https://kungfupanda.fandom.com/wiki/Viper" target="_blank">Viper</a> </li>
 				<li>More Pandas - <a href="https://kungfupanda.fandom.com/wiki/Nu_Hai" target="_blank">Nu Hai</a>, <a href="https://kungfupanda.fandom.com/wiki/Bao_(panda)" target="_blank">Bao</a>, <a href="https://kungfupanda.fandom.com/wiki/Jing" target="_blank">Jing</a>, <a href="https://kungfupanda.fandom.com/wiki/Fan_Tong)" target="_blank">Fan Tong</a></li>
@@ -34,6 +36,7 @@
 				<li><a href="https://kungfupanda.fandom.com/wiki/Jindiao">Jin Dao</a> from Paws of Destiny</li>
 			</p>
 		</div>
+	</div>
 			</body>
 		<footer style="background-color: black; color: white"><marquee> Made by Rithun for a Project</marquee></footer>
 </html>
