Almost Finished it!

--- a/panda.html
+++ b/panda.html
@@ -3,37 +3,51 @@
 <head>
 	<title>Kung-Fu Panda</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="icon" href="dw.jpg">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
-<body style=" margin: 0px; font-size: 24px;">
+<body style=" font-size: 4px;">
 	<!--top section-->
 	<div class="wrapper">
 		<header style="background-color: orange; padding: 50px; text-align: center;">
-			<img src="panda.jpg" style="border-radius: 150px; border: 10px;">
-			<h1 style="color: white; font-size: 78px">Po, The Dragon Warrior</h1>
+			<img src="panda.jpg" style="border-radius: 150px;">
+			<h1 style="color: white; font-size: 82px">Po, The Dragon Warrior</h1>
 		</header>
 	</div>
 	<!--details-->
-	<div class="bloom">
-		<h2 >About Po</h2>
-			<p style="text-align: justify; font-size: 24px; margin: 0 100px">
+	<div class="hmmmm">
+		<h2>About Po</h2>
+			<p style="text-align: justify; font-size: 24px;">
 				<a href="https://kungfupanda.fandom.com/wiki/Po">Po</a> aka The Dragon Warrior is a character from a famous animated movie, "<a href="https://en.wikipedia.org/wiki/Kung_Fu_Panda">Kung-Fu Panda</a>". It's first movie was released on 2008, then they released 2 more of its series on 2011 and 2016 respectively and was rated PG. The character is a fat, fluffy panda who likes 2 things-eating and fighting. He got selected as the dragon master by The Grand Master Oogway and then got training by Master Shifu and The Furious Five. It is a really nice movie and you gotta see it!
 			</p>
 		<div class="content">
 		<!--links-->
 		<h2>Friends</h2>
-			<figure class="small"><img src="f5.jpg" class="yeet" alt="The Furious Five"><img src="pod.jpg" class="yeet" width="180px" alt="Panda Buddies"><img src="mm.jpg" class="yeet"></figure>
-			<p class="hmm">
-				<li>Furious Five - <a href="https://kungfupanda.fandom.com/wiki/Tigress" target="_blank">Tigress</a>, <a href="https://kungfupanda.fandom.com/wiki/Monkey" target="_blank">Monkey</a>, <a href="https://kungfupanda.fandom.com/wiki/Crane" target="_blank">Crane</a>, <a href="https://kungfupanda.fandom.com/wiki/Mantis" target="_blank">Mantis</a> and <a href="https://kungfupanda.fandom.com/wiki/Viper" target="_blank">Viper</a> </li>
-				<li>More Pandas - <a href="https://kungfupanda.fandom.com/wiki/Nu_Hai" target="_blank">Nu Hai</a>, <a href="https://kungfupanda.fandom.com/wiki/Bao_(panda)" target="_blank">Bao</a>, <a href="https://kungfupanda.fandom.com/wiki/Jing" target="_blank">Jing</a>, <a href="https://kungfupanda.fandom.com/wiki/Fan_Tong)" target="_blank">Fan Tong</a></li>
-				<li>Po's Masters - <a href="https://kungfupanda.fandom.com/wiki/Shifu" target="_blank" title="Know more about Shifu">Shifu</a>, <a href="https://kungfupanda.fandom.com/wiki/Oogway" target="_blank" title="Know more abour Oogway">Oogway</a></li>
-			</p>
-		<h2>Enemies</h2>
+	</div>
+		<figure>
+			<img src="friends.jpg" class="yeet">
+		</figure>
+		<div class="hmmmm">
 			<p>
-				<li><a href="https://kungfupanda.fandom.com/wiki/Tai_Lung" target="_blank" title="Know more about Tai Lung">Tai Lung</a> from Kung-Fu Panda</li>
-				<li><a href="https://kungfupanda.fandom.com/wiki/Shen" target="_blank" title="Know more about Shen">Lord Shen</a> from Kung-Fu Panda 2</li>
-				<li><a href="https://kungfupanda.fandom.com/wiki/Kai_(Kung_Fu_Panda_3)" target="_blank" title="Know more about Kai"> Bull Kai</a> from Kung-Fu Panda 3</li>
-				<li><a href="https://kungfupanda.fandom.com/wiki/Jindiao">Jin Dao</a> from Paws of Destiny</li>
+				<li>Furious Five - <a href="https://kungfupanda.fandom.com/wiki/Tigress" target="_blank">Tigress</a>, <a href="https://kungfupanda.fandom.com/wiki/Monkey" target="_blank">Monkey</a>, <a href="https://kungfupanda.fandom.com/wiki/Crane" target="_blank">Crane</a>, <a href="https://kungfupanda.fandom.com/wiki/Mantis" target="_blank">Mantis</a>, <a href="https://kungfupanda.fandom.com/wiki/Viper" target="_blank">Viper</a> </li>
+				<li>More Panda - <a href="https://kungfupanda.fandom.com/wiki/Nu_Hai" target="_blank">Nu Hai</a>, <a href="https://kungfupanda.fandom.com/wiki/Bao_(panda)" target="_blank">Bao</a>, <a href="https://kungfupanda.fandom.com/wiki/Jing" target="_blank">Jing</a>, <a href="https://kungfupanda.fandom.com/wiki/Fan_Tong)" target="_blank">Fan Tong</a></li>
+				<li>Po's Masters - <a href="https://kungfupanda.fandom.com/wiki/Shifu" target="_blank" >Shifu</a>, <a href="https://kungfupanda.fandom.com/wiki/Oogway" target="_blank" >Oogway</a></li>
+				<li>Kung fu kid <a href="https://kungfupanda.fandom.com/wiki/Peng#:~:text=Peng%20is%20a%20character%20in,of%20Peace's%20Peace%20Jubilee.">Peng</a></li>
+			</p>
+		<h2 style="margin-left: -50px">Enemies</h2>
+	</div>
+		<figure style="align-items: center;">
+			<img src="enemies.jpg" class="yeet">
+		</figure>
+		<div class="hmmmm">
+			<p>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Tai_Lung" target="_blank" >Tai Lung</a> from Kung-Fu Panda</li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Shen" target="_blank" >Lord Shen</a> from Kung-Fu Panda 2</li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Kai_(Kung_Fu_Panda_3)" target="_blank" > Bull Kai</a> from Kung-Fu Panda 3</li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Jindiao">Jin Diao</a> from Paws of Destiny</li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Boss_Wolf">Boss Wolf</a></li>
+				<li><a href="https://kungfupanda.fandom.com/wiki/Fenghuang">Fenghuang</a></li>
 			</p>
 		</div>
 	</div>
