--- a/panda.html
+++ b/panda.html
@@ -52,5 +52,5 @@
 		</div>
 	</div>
 			</body>
-		<footer style="background-color: black; color: white"><marquee> Made by Rithun for a Project</marquee></footer>
+		<footer style="background-color: black; color: white"><marquee> Made by Rithun Priyesh for a Project</marquee></footer>
 </html>
