debugged the error

--- a/panda.html
+++ b/panda.html
@@ -25,7 +25,7 @@
 		<!--links-->
 		<h2>Friends</h2>
 	</div>
-		<img src="friends.jpg" class="yeet">
+		<img src="friends.jpeg" class="yeet">
 		<div class="hmmmm">
 			<p>
 				<li>Furious Five - <a href="https://kungfupanda.fandom.com/wiki/Tigress" target="_blank">Tigress</a>, <a href="https://kungfupanda.fandom.com/wiki/Monkey" target="_blank">Monkey</a>, <a href="https://kungfupanda.fandom.com/wiki/Crane" target="_blank">Crane</a>, <a href="https://kungfupanda.fandom.com/wiki/Mantis" target="_blank">Mantis</a>, <a href="https://kungfupanda.fandom.com/wiki/Viper" target="_blank">Viper</a> </li>
@@ -35,7 +35,7 @@
 			</p>
 		<h2 style="margin-left: -50px">Enemies</h2>
 	</div>
-		<img src="enemies.jpg" class="yeet">
+		<img src="enemies.jpeg" class="yeet">
 		<div class="hmmmm">
 			<p>
 				<li><a href="https://kungfupanda.fandom.com/wiki/Tai_Lung" target="_blank" >Tai Lung</a> from Kung-Fu Panda</li>
